Gold page: add short descriptions to options

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -6642,6 +6642,23 @@ body:not(.gold) .allminus-link {
     margin-top: 7px;
 }
 
+.gold-form p.goldtype-note {
+    .gold-form .note;
+    margin-top: 0;
+    margin-left: 22px;
+    padding-bottom: 7px;
+    border-bottom: 1px solid #e1b000;
+}
+
+.gold-form label:last-of-type {
+    padding-right: 0;
+
+    p.goldtype-note {
+        border-bottom: 0;
+        padding: 0;
+    }
+}
+
 .gold-form .spacer {
     margin-top: 20px !important;
 }
