--- a/r2/r2/templates/linklisting.html
+++ b/r2/r2/templates/linklisting.html
@@ -23,14 +23,11 @@
 ## a kooky hack to make ranks and voting arrows in the spotlight box line up
 ## without late rendering or blasting style attributes everywhere
 <style>
-  body > .content .link .rank {
+  body > .content .link .rank, .rank-spacer {
     width: ${thing.rank_width}ex
   }
-  body > .content .link .midcol {
+  body > .content .link .midcol, .midcol-spacer {
     width: ${thing.midcol_width}ex
-  }
-  .content .trending-subreddits {
-    padding-left: ${thing.midcol_width}ex
   }
 </style>
 <%include file="listing.html"/>
