--- a/r2/r2/templates/trendingsubredditsbar.html
+++ b/r2/r2/templates/trendingsubredditsbar.html
@@ -21,11 +21,15 @@
 ###############################################################################
 
 <div class="trending-subreddits">
-  <strong>${_('trending subreddits')}</strong>
-  <ul>
-  %for subreddit_name in thing.subreddit_names:
-    <li><a href="/r/${subreddit_name}" target="_blank">/r/${subreddit_name}</a></li>
-  %endfor
-  </ul>
-  <a href="${thing.comment_url}" class="${thing.comment_label_cls}">${thing.comment_label}</a>
+  <div class="rank-spacer"></div>
+  <div class="midcol-spacer"></div>
+  <div class="trending-subreddits-content">
+    <strong>${_('trending subreddits')}</strong>
+    <ul>
+    %for subreddit_name in thing.subreddit_names:
+      <li><a href="/r/${subreddit_name}" target="_blank">/r/${subreddit_name}</a></li>
+    %endfor
+    </ul>
+    <a href="${thing.comment_url}" class="${thing.comment_label_cls}">${thing.comment_label}</a>
+  </div>
 </div>
