--- a/r2/r2/templates/modaction.html
+++ b/r2/r2/templates/modaction.html
@@ -32,7 +32,7 @@
  %> 
 
 <tr class="modactions" style="background-color: ${bgcolor}" data-fullname="${thing.fullname}">
-  <td class="timestamp whitespace:nowrap">${timestamp(thing.date)}&#32;ago</td>
+  <td class="timestamp whitespace:nowrap">${timestamp(thing.date, live=True, include_tense=True)}</td>
   %if is_multi:
     <td class="subreddit">${plain_link('/r/' + thing.sr_name, thing.sr_path + 'about/log', title=thing.sr_name)}</td>
   %endif
