--- a/r2/r2/templates/link.html
+++ b/r2/r2/templates/link.html
@@ -209,7 +209,7 @@ ${parent.thing_data_attributes(what)} data-ups="${what.upvotes}" data-downs="${w
   %>
   ${unsafe(taglinetext % dict(reddit=self.subreddit(),
                               score=capture(self.score, thing, thing.likes, tag='span'),
-                              when=capture(thing_timestamp, thing, thing.timesince),
+                              when=capture(thing_timestamp, thing, thing.timesince, live=True, include_tense=True),
                               author=WrappedUser(thing.author, thing.attribs, thing).render(),
                               lastedited=capture(edited, thing, thing.lastedited)
                               ))}
