Add a little more spacing around trending subreddits list.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -8345,7 +8345,8 @@ body.with-listing-chooser {
 }
 
 .trending-subreddits {
-    margin-top: -4px;
+    margin-top: -2px;
+    margin-bottom: 8px;
     line-height: 1.75em;
 
     // the combined padding/margins of .link and .midcol
