Clean up the layout for the adminnotes area.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -8309,6 +8309,17 @@ body.with-listing-chooser {
     -moz-border-radius: 5px;
 }
 
+#adminnotes-form {
+    textarea {
+        width: 285px;
+    }
+
+    .notes-button {
+        margin: 3px 0px;
+        display: block;
+    }
+}
+
 #past-notes {
     overflow-y: auto;
     max-height: 150px;
