Update advertising page

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -3447,8 +3447,8 @@ button.button[disabled] {
     margin-bottom: 50px; 
  }
 
-.self-service.instructions p{ 
-    margin-left: 20px; 
+.self-service.instructions p { 
+    margin: 10px 0;
 }
 
 .self-service.instructions ul { 
@@ -3458,6 +3458,22 @@ button.button[disabled] {
 
 .self-service.instructions li + li { 
     padding-top: 10px; 
+}
+
+.self-service {
+    .ad-launch-buttons {
+        text-align: center; 
+
+        .button {
+            font-size: 22px;
+            padding: 10px 20px;
+            margin-bottom: 5px;
+        }
+    }
+
+    .col-bottom-box {
+        margin-right: 20px;
+    }
 }
 
 body.contact-us-page {
