Fix links on advertising page

--- a/r2/r2/templates/selfserveblurb.html
+++ b/r2/r2/templates/selfserveblurb.html
@@ -43,7 +43,7 @@ from decimal import Decimal
                 <h2>Reach your audience</h2>
                 <p>Amplify your message to reddit’s 113 MM users through &#32;<a href="/promoted/new_promo/">promoted posts</a>, and reach your audience by targeting subreddits (communities of reddit users) that are relevant to your campaign. </p>
                 
-                <a href="/wiki/selfserve#wiki_how_do_i_find_the_best_subreddits_for_my_campaign_targeting">Tips for finding the best subreddit city-targeting</a>
+                <a href="/wiki/selfserve#wiki_how_do_i_find_the_best_subreddits_for_my_campaign_targeting.3F">Tips for finding the best subreddit city-targeting</a>
             </div>
         </div>
         <div class="center-col-1 column">
@@ -63,7 +63,7 @@ from decimal import Decimal
                 %endif
                 ${formatted_min_pageviews} times in any reddit page you like. You control how many more times you’d like your ad to appear on reddit. </p>
                 
-                <a href="/wiki/selfserve#wiki_how_much_does_it_cost">More on managing your budget</a>
+                <a href="/wiki/selfserve#wiki_how_much_does_it_cost.3F">More on managing your budget</a>
             </div>
         </div>
         <div class="center-col-2 column">
@@ -73,7 +73,7 @@ from decimal import Decimal
                 <h2>Connect with customers</h2>
                 <p>Sponsored posts include a &ldquo;comments&rdquo; section, allowing advertisers to chat with redditors that have questions and comments about their ads in real-time. Add value to your ad by answering questions your target consumer has about your campaign!</p>
 
-                <a href="wiki/selfserve#wiki_what_are_the_best_practices_for_reddit_advertising">Best practices recommendations for reddit advertising</a>
+                <a href="wiki/selfserve#wiki_what_are_the_best_practices_for_reddit_advertising.3F">Best practices recommendations for reddit advertising</a>
             </div>
         </div>
         <div class="right-col column">
@@ -83,7 +83,7 @@ from decimal import Decimal
                 <h2>Track your success</h2>
                 <p>reddit creates a custom traffic page for every sponsored ad created, demonstrating hourly delivery stats &amp; graphs for you to best measure the success of your campaign. This delivery reporting can be downloaded to a csv file for your records.</p>
 
-                <a href="/wiki/selfserve#wiki_how_is_my_ad_performing">Tracking how your ad is performing</a>
+                <a href="/wiki/selfserve#wiki_how_is_my_ad_performing.3F">Tracking how your ad is performing</a>
             </div>
         </div>
 
