--- a/r2/r2/templates/selfserveblurb.html
+++ b/r2/r2/templates/selfserveblurb.html
@@ -95,8 +95,10 @@ from decimal import Decimal
             </div>
             <p>
                 For questions about our advertising platform, check out the platform’s&#32;<a href="/wiki/selfserve">FAQ</a>, or&#32; <a href="mailto:selfservicesupport@reddit.com?subject=Questions about reddit advertising">email customer support</a>.
-            <br/>
-            For large-scale advertising opportunities, &#32;<a href="mailto:marketing@reddit.com?subject=campaign%20inquiry">email our sales team!</a>.
+                <br/>
+                For large-scale advertising opportunities, &#32;<a href="mailto:marketing@reddit.com?subject=campaign%20inquiry">email our sales team!</a>.
+                <br/>
+                New to reddit advertising? &#32;<a href="https://dl.dropboxusercontent.com/u/20833675/reddit%20Advertising%20Manual.pdf" download="reddit Advertising Manual.pdf">Download the quick start manual here.</a>
             </p>
             <div style="clear:both;"></div>
         </div>
