Change URL to Ad. Manual download to point at S3.

--- a/r2/r2/templates/selfserveblurb.html
+++ b/r2/r2/templates/selfserveblurb.html
@@ -98,7 +98,7 @@ from decimal import Decimal
                 <br/>
                 For large-scale advertising opportunities, &#32;<a href="mailto:marketing@reddit.com?subject=campaign%20inquiry">email our sales team!</a>.
                 <br/>
-                New to reddit advertising? &#32;<a href="https://dl.dropboxusercontent.com/u/20833675/reddit%20Advertising%20Manual.pdf" download="reddit Advertising Manual.pdf">Download the quick start manual here.</a>
+                New to reddit advertising? &#32;<a href="http://www.redditstatic.com/ads/reddit-Advertising-Manual.pdf" download="reddit Advertising Manual.pdf">Download the quick start manual here.</a>
             </p>
             <div style="clear:both;"></div>
         </div>
